--- a/05-unit-tests/05-unit-tests.csproj
+++ b/05-unit-tests/05-unit-tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\03-minial-and-webapi-project\03-minial-and-webapi-project.csproj" />
+  </ItemGroup>
+
 </Project>
