--- a/01-webapi-project/01-webapi-project.csproj
+++ b/01-webapi-project/01-webapi-project.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\00-Domain\00-Domain.csproj" />
+  </ItemGroup>
+
 </Project>
